--- a/index.html
+++ b/index.html
@@ -72,10 +72,7 @@
     <!-- Ocr container -->
     <div class="card" style="width: 30rem;">
 
-      <div class="card-body">
-			
-		
-        
+      <div class="card-body"> 
         <p class="card-text">
       <div class="drag-file-area">
 
@@ -285,7 +282,7 @@
           </p>
         </div>
         <div class="content-right">
-          <img src="./icon/content-box.svg" alt="" />
+          <img src="./icon/content-box.svg" alt="" class="content-image1"/>
         </div>
       </div>
       <div class="content-box2 mt-5">
